[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chemname"
version = "0.0.1"
authors = [
  { name="lancylot", email="lancylot2004@proton.me" },
]

description = "A tool to convert any text to chemical names, where possible."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
keywords = ["chemistry", "name", "chemical"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""